Made Coinbox methods final, as the only reason to extend the class is to save in a new table. Implemented CoinReturn to return coins to the user Added CoinReturn to VendingMachine Changed ProducRow to be a linked list to be more efficient Changed CoinBox to use stream to calculate value Added unit tests for CoinBox