@@ -1,16 +1,18 @@
 package com.karmasoft.vendingmachine.model;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
+import java.util.Optional;
+import java.util.stream.IntStream;
 
 public class ProductRow {
-    String ButtonCombo;
+    String buttonCombo;
     Integer price;
-    ArrayList<Product> products;
+    LinkedList<Product> products;
 
-    public ProductRow (String buttonCombo, Integer price) {
-        this.ButtonCombo = buttonCombo;
-        this.price=price;
-        products = new ArrayList<>();
+    public ProductRow(String buttonCombo, Integer price) {
+        this.buttonCombo = buttonCombo;
+        this.price = price;
+        products = new LinkedList<>();
     }
 
     public Integer getPrice() {
@@ -23,25 +25,23 @@ public class ProductRow {
     }
 
     public String getButtonCombo() {
-        return ButtonCombo;
+        return buttonCombo;
     }
 
     public ProductRow setButtonCombo(String buttonCombo) {
-        ButtonCombo = buttonCombo;
+        this.buttonCombo = buttonCombo;
         return this;
     }
 
-    public Product getFrontProduct() {
-        return products.get(0);
+    public Optional<Product> getFrontProduct() {
+        return products.isEmpty() ? Optional.empty() : Optional.of(products.getFirst());
     }
 
     public void fillProduct(Product product, Integer number) {
-        for (int i = 0; i<number; i++) {
-            products.add(product);
-        }
+        IntStream.range(0, number).forEach(i -> products.add(product));
     }
 
     public void vendProduct() {
-        products.remove(0);
+        products.removeFirst();
     }
 }
